kubeadm/grafana/manifests/grafana-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: monitoring
  name: grafana-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: grafana.local
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
